added game of life project

--- a/portfoilio/index.html
+++ b/portfoilio/index.html
@@ -106,13 +106,15 @@
 							</article>
 							
 						</div>
-						<!-- <div class="col-4 col-6-medium col-12-small">
+						<div class="col-6 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Lorem ipsum</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://github.com/JWNicholson/gameoflife-john-nicholson" class="image featured project-img"><img src="images\jwn-game-of-life.jpg" alt="game of life project."/></a>
+								<h3><a href="https://github.com/JWNicholson/gameoflife-john-nicholson">Conway's Game Of Life</a></h3>
+								<p>Game of life simulation</p>
+								<a href="https://github.com/JWNicholson/gameoflife-john-nicholson" class="button large scrolly">See my code</a>
 							</article>
-						</div> -->
+							
+						</div>
 						<!-- <div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
