--- a/portfoilio/index.html
+++ b/portfoilio/index.html
@@ -30,7 +30,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="images/jwn_profile-2-420px.jpg" alt="image of JW nicholson" /></span>
+							<span class="image fit"><img src="./images/jwn_profile-2-420px.jpg" alt="image of JW nicholson" /></span>
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
@@ -99,7 +99,7 @@
 						</div>
 						<div class="col-6 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://github.com/JWNicholson/responsive-web-design-I/tree/john-nicholson" class="image featured project-img"><img src="images/great_idea_projec5t-jwn.png" alt="great idea website project."/></a>
+								<a href="https://github.com/JWNicholson/responsive-web-design-I/tree/john-nicholson" class="image featured project-img"><img src="portfoilio\images\great_idea_projec5t-jwn.png" alt="great idea website project."/></a>
 								<h3><a href="#">Great Idea</a></h3>
 								<p>This project explores what it takes to make websites work on multiple sizes of devices. I also re-factored the code to start with phone size screens.</p>
 								<a href="https://github.com/JWNicholson/responsive-web-design-I/tree/john-nicholson" class="button large scrolly">See my code</a>
